[package]
name = "modjo"
version = "0.0.1"
edition = "2024"
authors = ["Juan Esteban Manrique Giraldo <murksopps@gmail.com>"]
description = "TUI API Client (Postman + Apidog clone)"

[dependencies]
# The graphical interface (TUI)
ratatui = "0.30.0"
# Keyboard and mouse input handling for the TUI
crossterm = { version = "0.28", features = ["event-stream"] } 

# Request handling and async runtime
tokio = { version = "1.43", features = ["full"] }

reqwest = { version = "0.12", features = ["json"] } 

# Management of configuration files
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8" 

# Visuals Utils
color-eyre = "0.6"
